# g-dreamer

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dreamerv3_code_map.md  graph_obs_contract.md  rl_primer.md  size_generalization_redesign_brief.md  sprint_handoff.md
docs/assets/: size_generalization_data.json
scripts/: collect_consensus_world_model_data.py  collect_learner_on_policy_data.py  collect_on_policy_data.py  compare_toy_controllers.py  compute_analysis.py  dagger_iteration.py  debug_toy_consensus_episode.py  eval_minimal_graph_world_model.py  eval_mpc_control.py  eval_multistep_rollout.py  eval_toy_policies.py  plot_mpc_control.py  plot_size_generalization.py  plot_size_generalization_redesign.py  run_upstream_crafter_debug.sh  summarize_scores_jsonl.py  train_minimal_graph_world_model.py  upload_dreamer_run_to_wandb.py
scripts/cluster/: eval_controllers.sh  eval_dreamer.sh  setup_env.sh  smoke_test.sh  train_dreamer.sh
src/dgr/: eval.py  run_graph_dreamer_toy.py  run_upstream_toy_gym.py  train.py
src/dgr/analysis/: graph_invariants.py  model_jacobian.py  system_invariants.py
src/dgr/control/: loop.py  mpc.py  (+2 more)
tests/: test_analysis.py  test_env_adapter_jittable.py  test_env_topologies.py  test_flatten_graph.py  test_goal_visibility_mask.py  test_graph_encoder_swap.py  test_graph_invariance.py  test_graph_spec_shapes.py  test_minimal_graph_world_model.py  test_mpc.py  test_mpc_control.py  test_placeholder.py  test_smoke_train_step.py  test_topologies.py  test_toy_embodied_adapter.py  test_toy_gym_adapter.py  test_wm_rollout.py
(+54 files in other folders)
