[tool.poetry]
name = "g_dreamer"
version = "0.1.0"
description = "Graph-based and physics-informed DreamerV3 for multi-agent RL"
authors = ["Donna Vakalis <donna.vakalis@olympian.org>"]
packages = [{ include = "dgr", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jax = "0.4.33"
numpy = "<2"
jaxlib = "0.4.33"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.15.1"
pre-commit = "^4.5.1"


[tool.poetry.group.upstream.dependencies]
optax = "0.2.3"
tqdm = "^4.67.3"
einops = "^0.8.2"
jaxtyping = "^0.3.9"
colored-traceback = "^0.4.2"
av = "^16.1.0"
elements = ">=3.19.1"
ninjax = ">=3.5.1"
portal = ">=3.5.0"
granular = ">=0.20.3"
scope = ">=0.4.4"
crafter = "^1.8.3"

[tool.ruff]
line-length = 100
exclude = ["third_party/**"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third_party"]
addopts = "-ra"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
